<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.produce.fragments.produce_details">




        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_tractor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Produce"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_part"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/lbl_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Quality"
                app:layout_constraintStart_toStartOf="@+id/lbl_type"
                app:layout_constraintTop_toBottomOf="@+id/lbl_type" />

            <TextView
                android:id="@+id/lbl_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="22/11/1999"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lbl_date" />

            <EditText
                android:id="@+id/edit_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Eggs"
                android:minHeight="48dp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_type"
                app:layout_constraintEnd_toEndOf="@+id/edit_date"
                app:layout_constraintStart_toStartOf="@+id/edit_date"
                app:layout_constraintTop_toTopOf="@+id/lbl_type" />

            <TextView
                android:id="@+id/lbl_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Produce Type"
                app:layout_constraintStart_toStartOf="@+id/lbl_date"
                app:layout_constraintTop_toBottomOf="@+id/lbl_date" />

            <EditText
                android:id="@+id/edit_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:hint="Grade A"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_quality"
                app:layout_constraintEnd_toEndOf="@+id/edit_type"
                app:layout_constraintStart_toStartOf="@+id/edit_type"
                app:layout_constraintTop_toTopOf="@+id/lbl_quality" />

            <TextView
                android:id="@+id/lbl_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_medium"
                android:text="Quantity"
                app:layout_constraintStart_toStartOf="@+id/lbl_quality"
                app:layout_constraintTop_toBottomOf="@+id/lbl_quality" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:hint="2 Trays"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/lbl_quantity"
                app:layout_constraintEnd_toEndOf="@+id/edit_quality"
                app:layout_constraintStart_toStartOf="@+id/edit_quality"
                app:layout_constraintTop_toTopOf="@+id/lbl_quantity" />

            <EditText
                android:id="@+id/edit_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="24dp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                app:layout_constraintEnd_toEndOf="@+id/quantity"
                app:layout_constraintStart_toStartOf="@+id/lbl_comment"
                app:layout_constraintTop_toBottomOf="@+id/lbl_comment" />

            <TextView
                android:id="@+id/lbl_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/comment"
                app:layout_constraintStart_toStartOf="@+id/lbl_quantity"
                app:layout_constraintTop_toBottomOf="@+id/lbl_quantity" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/edit_comment"
                app:layout_constraintTop_toTopOf="@+id/btn_discard" />

            <Button
                android:id="@+id/btn_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:layout_marginTop="36dp"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@+id/edit_comment"
                app:layout_constraintTop_toBottomOf="@+id/edit_comment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>